--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,27 +1,23 @@
 name: RSI Bot
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 * * * *"
+  workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Repo'yu çek
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Python kur
-        uses: actions/setup-python@v5
+      - name: Python
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.10"
 
-      - name: Kütüphaneleri yükle
-        run: |
-          pip install tradingview-ta
+      - name: Install
+        run: pip install -r requirements.txt
 
-      - name: Botu çalıştır
-        run: |
-          python main.py
+      - name: Run bot
+        run: python main.py
