--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "tv-rsi-capture",
+  "type": "module",
+  "name": "rsi-bot",
   "version": "1.0.0",
   "dependencies": {
-    "puppeteer": "^22.0.0",
-    "sharp": "^0.33.0",
-    "tesseract.js": "^5.0.4",
-    "node-telegram-bot-api": "^0.64.0"
+    "puppeteer-core": "^21.7.0"
   }
 }
