--- a/.github/workflows/tv_capture.yml
+++ b/.github/workflows/tv_capture.yml
@@ -1,36 +1,7 @@
-name: RSI Capture
-
-on:
-  schedule:
-    - cron: "0 * * * *"   # saatte 1 kez çalışacak
-  workflow_dispatch:
-
-jobs:
-  capture:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Repo checkout
-        uses: actions/checkout@v4
-
-      - name: Node kurulumu
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Chrome kurulumu
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable xvfb
-
-      - name: Paketleri kur
-        run: npm install
-
-      - name: Capture çalıştır
-        run: xvfb-run --auto-servernum node capture.js
-
-      - name: Upload chart.png as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: chart-screenshot
-          path: chart.png
+- name: Run Bot
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
+          SESSION_ID: ${{ secrets.SESSION_ID }}     # Burayı ekledik
+          SESSION_SIGN: ${{ secrets.SESSION_SIGN }} # Burayı ekledik
+        run: node capture.js
