--- a/.github/workflows/tv_capture.yml
+++ b/.github/workflows/tv_capture.yml
@@ -1,7 +1,47 @@
-- name: Run Bot
+name: RSI Tablo Botu
+
+on:
+  schedule:
+    - cron: '0 * * * *' # Her saatin başında çalışır
+  workflow_dispatch:      # Manuel çalıştırma butonu
+
+jobs:
+  capture-and-ocr:
+    runs-on: ubuntu-latest
+    
+    # Repoya dosya yazabilmesi için gerekli izinler
+    permissions:
+      contents: write
+
+    steps:
+      - name: Kodu Klonla
+        uses: actions/checkout@v3
+
+      - name: Node.js Kur
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Google Chrome Kur
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
+      - name: Bağımlılıkları Yükle
+        run: npm install
+
+      - name: Botu Çalıştır
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
-          SESSION_ID: ${{ secrets.SESSION_ID }}     # Burayı ekledik
-          SESSION_SIGN: ${{ secrets.SESSION_SIGN }} # Burayı ekledik
+          SESSION_ID: ${{ secrets.SESSION_ID }}
+          SESSION_SIGN: ${{ secrets.SESSION_SIGN }}
         run: node capture.js
+
+      - name: Sinyal Durumunu Kaydet (State Persistence)
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add state.json || exit 0
+          git commit -m "Sinyal durumu güncellendi" || exit 0
+          git push
