--- a/.github/workflows/tv_capture.yml
+++ b/.github/workflows/tv_capture.yml
@@ -2,30 +2,25 @@ name: RSI Tablo Botu
 
 on:
   schedule:
-    - cron: '0 * * * *' # Her saatin başında çalışır
-  workflow_dispatch:      # Manuel çalıştırma butonu
+    - cron: '0 * * * *' # Her saat başı
+  workflow_dispatch:      # Manuel buton
 
 jobs:
-  capture-and-ocr:
+  check-rsi:
     runs-on: ubuntu-latest
-    
-    # Repoya dosya yazabilmesi için gerekli izinler
     permissions:
       contents: write
-
     steps:
-      - name: Kodu Klonla
+      - name: Kodu Çek
         uses: actions/checkout@v3
 
-      - name: Node.js Kur
+      - name: Node Kur
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Google Chrome Kur
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
+      - name: Chrome Kur
+        run: sudo apt-get update && sudo apt-get install -y google-chrome-stable
 
       - name: Bağımlılıkları Yükle
         run: npm install
@@ -39,10 +34,10 @@ jobs:
           GITHUB_EVENT_NAME: ${{ github.event_name }}
         run: node capture.js
 
-      - name: Sinyal Durumunu Kaydet (State Persistence)
+      - name: Durumu Kaydet
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add state.json || exit 0
-          git commit -m "Sinyal durumu güncellendi" || exit 0
+          git commit -m "update state" || exit 0
           git push
