--- a/.github/workflows/tv_capture.yml
+++ b/.github/workflows/tv_capture.yml
@@ -1,30 +1,20 @@
 name: RSI Tablo Botu
-
 on:
   schedule:
-    - cron: '0 * * * *' # Her saat başı
-  workflow_dispatch:      # Manuel buton
-
+    - cron: '0 * * * *'
+  workflow_dispatch:
 jobs:
   check-rsi:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - name: Kodu Çek
-        uses: actions/checkout@v3
-
-      - name: Node Kur
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
-
-      - name: Chrome Kur
-        run: sudo apt-get update && sudo apt-get install -y google-chrome-stable
-
-      - name: Bağımlılıkları Yükle
-        run: npm install
-
+      - run: sudo apt-get update && sudo apt-get install -y google-chrome-stable
+      - run: npm install
       - name: Botu Çalıştır
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
@@ -33,7 +23,6 @@ jobs:
           SESSION_SIGN: ${{ secrets.SESSION_SIGN }}
           GITHUB_EVENT_NAME: ${{ github.event_name }}
         run: node capture.js
-
       - name: Durumu Kaydet
         run: |
           git config --global user.name 'github-actions[bot]'
